# django-practical-20-7

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
mysite/: shopapp-fixtures.json
mysite/mysite/: settings.py
